# SimpleAR

./: .gitignore  README.md  generate.py  pyproject.toml
docs/: EVAL.md  PLAY.md  TRAIN.md
scripts/: env.sh  env_rl.sh  zero3.json
scripts/eval/: bench_dpg.sh  bench_dpg2.sh  bench_geneval.sh  bench_geneval2.sh
scripts/tokens/: extract_token.sh  generate_meta.py
scripts/train/: train_example.sh
simpar/: __init__.py  conversation.py  mm_utils.py  utils.py
simpar/configs/: config_grpo_clip.yaml  config_grpo_vqa.yaml
simpar/data/: ddp_distributed.py  extract_token.py
simpar/eval/: model_t2i.py
simpar/grpo/: configs.py  rewards.py
simpar/grpo/utils/: __init__.py  evaluation.py  hub.py  import_utils.py  model_utils.py
simpar/model/: __init__.py  builder.py
simpar/model/language_model/: configuration_qwen2.py  modeling_qwen2.py  simpar_qwen2.py
simpar/model/tokenizer/cosmos_tokenizer/: image_cli.py  image_lib.py  utils.py  video_cli.py  video_lib.py
simpar/model/tokenizer/cosmos_tokenizer/modules/: __init__.py  layers2d.py  layers3d.py  patching.py  quantizers.py  utils.py
simpar/model/tokenizer/cosmos_tokenizer/networks/: __init__.py  configs.py  continuous_image.py  continuous_video.py  discrete_image.py  discrete_video.py
simpar/train/: curr_sampler.py  llava_trainer.py  llava_trainer_grpo.py  preprocess.py  reward.py  t2i_data.py  t2token_data.py  train.py  train_mem.py
transformers/src/transformers/: trainer.py
